<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:elevation="16dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backround_list"
        android:orientation="horizontal"
        android:padding="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nomor_ayat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/teks_arab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/teks_arab"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/teks_latin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/teks_latin"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/teks_indonesia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teks_indonesia"
                android:textColor="@color/white"
                android:textAlignment="textEnd"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>