<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:elevation="16dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backround_list"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/judul_arab_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/louisgeorgecafe"
            android:layout_gravity="center_vertical"
            android:src="@drawable/iconwhite"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:text="@string/judul_arab" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/judul_arab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/judul_arab"
                android:fontFamily="@font/louisgeorgecafe"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/judul_latin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/judul_latin"
                android:fontFamily="@font/louisgeorgecafe"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/jumlah_ayat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/ayat"
                android:fontFamily="@font/louisgeorgecafe"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>