<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backround"
    tools:context=".detail.DetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/Cardview"
        android:layout_width="0dp"
        android:layout_height="165dp"
        android:layout_margin="16dp"
        android:elevation="10dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/gradient2"
            app:lottie_speed="1" />

        <ToggleButton
            android:id="@+id/toggle_favorite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:background="@drawable/favorite_toggle"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff=""
            android:textOn="" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/judul_arab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul_arab"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/judul_latin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul_latin"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/arti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul_latin"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tempat_turun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tempat_turun"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/jumlah_ayat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ayat"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Cardview"
            tools:listitem="@layout/list_item_detail" />


</androidx.constraintlayout.widget.ConstraintLayout>